# peano.hs

./: .travis.yml  peano.cabal
.github/workflows/: haskell-ci.yml
Data/: Peano.hs
