name:                peano
version:             0.1.0.1
synopsis:            Peano numbers
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
category:            Data, Math
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC ==7.8.*,
                     GHC ==7.10.*,
                     GHC ==7.12.*,
                     GHC ==8.0.*

library
  exposed-modules:     Data.Peano
  extensions:          DeriveDataTypeable
  build-depends:       base >=4.7 && <5
